--- a/Demo/Demo/Base.lproj/Main.storyboard
+++ b/Demo/Demo/Base.lproj/Main.storyboard
@@ -18,17 +18,59 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gga-gO-OMA">
-                                <rect key="frame" x="117" y="284" width="140" height="98"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
-                                <state key="normal" title="モーダル"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gga-gO-OMA">
+                                <rect key="frame" x="187.5" y="283.5" width="187.5" height="100"/>
+                                <color key="backgroundColor" red="0.7816441449" green="1" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="45"/>
+                                <state key="normal" title="→"/>
                                 <connections>
-                                    <action selector="tappedShowSideMenuButton" destination="BYZ-38-t0r" eventType="touchUpInside" id="XZE-q0-iz7"/>
+                                    <action selector="didTapRightSideMenuButton" destination="BYZ-38-t0r" eventType="touchUpInside" id="hsn-hd-6ta"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="e3J-YY-ec7">
+                                <rect key="frame" x="0.0" y="283.5" width="187.5" height="100"/>
+                                <color key="backgroundColor" red="1" green="0.5409764051" blue="0.84731429820000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="Cc8-VK-ncx"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="45"/>
+                                <state key="normal" title="←"/>
+                                <connections>
+                                    <action selector="didTapLeftSideMenuButton" destination="BYZ-38-t0r" eventType="touchUpInside" id="1OE-CC-aVL"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hpE-Al-ORo">
+                                <rect key="frame" x="94" y="183.5" width="187.5" height="100"/>
+                                <color key="backgroundColor" red="0.46202266219999999" green="0.83828371759999998" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="x1k-Zi-5Ac"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="45"/>
+                                <state key="normal" title="↑"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tEK-i4-EQP">
+                                <rect key="frame" x="94" y="383.5" width="187.5" height="100"/>
+                                <color key="backgroundColor" red="0.93725490570000003" green="0.93725490570000003" blue="0.95686274770000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="45"/>
+                                <state key="normal" title="↓"/>
+                            </button>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="gga-gO-OMA" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.5" id="211-lf-l5F"/>
+                            <constraint firstItem="tEK-i4-EQP" firstAttribute="height" secondItem="hpE-Al-ORo" secondAttribute="height" id="6aL-TB-Pgx"/>
+                            <constraint firstItem="e3J-YY-ec7" firstAttribute="width" secondItem="gga-gO-OMA" secondAttribute="width" id="8bG-XG-6TR"/>
+                            <constraint firstItem="hpE-Al-ORo" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Blh-HH-8kN"/>
+                            <constraint firstItem="gga-gO-OMA" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="CGT-e9-vKa"/>
+                            <constraint firstItem="e3J-YY-ec7" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="D3f-pW-a2n"/>
+                            <constraint firstItem="gga-gO-OMA" firstAttribute="height" secondItem="e3J-YY-ec7" secondAttribute="height" id="Dbo-2z-2ug"/>
+                            <constraint firstItem="gga-gO-OMA" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="FF8-92-MgV"/>
+                            <constraint firstItem="tEK-i4-EQP" firstAttribute="top" secondItem="gga-gO-OMA" secondAttribute="bottom" id="SIk-5U-YIN"/>
+                            <constraint firstItem="e3J-YY-ec7" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="Uel-Ny-V4s"/>
+                            <constraint firstItem="hpE-Al-ORo" firstAttribute="width" secondItem="gga-gO-OMA" secondAttribute="width" id="Z7r-LH-LRY"/>
+                            <constraint firstItem="gga-gO-OMA" firstAttribute="top" secondItem="hpE-Al-ORo" secondAttribute="bottom" id="gnL-gJ-Fn0"/>
+                            <constraint firstItem="tEK-i4-EQP" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="r9l-co-QPW"/>
+                            <constraint firstItem="tEK-i4-EQP" firstAttribute="width" secondItem="hpE-Al-ORo" secondAttribute="width" id="ubl-wV-0cL"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
